--- a/mta.yaml
+++ b/mta.yaml
@@ -3,3 +3,31 @@ _schema-version: '2.1'
 description: test_git
 version: 0.0.1    
 
+
+modules:
+ - name: test
+   type: html5
+   path: test
+   parameters:
+      disk-quota: 512M
+      memory: 256M
+   build-parameters:
+      builder: grunt
+   requires:
+    - name: uaa_mta_test01
+    - name: dest_mta_test01
+
+resources:
+ - name: uaa_mta_test01
+   parameters:
+      path: ./xs-security.json
+      service-plan: application
+      service: xsuaa
+   type: org.cloudfoundry.managed-service
+
+ - name: dest_mta_test01
+   parameters:
+      service-plan: lite
+      service: destination
+   type: org.cloudfoundry.managed-service
+
